fix(repository): prevent table to overlap tabs in repo view
Related to CAM-4821

--- a/webapps/client/styles/pages/repository.less
+++ b/webapps/client/styles/pages/repository.less
@@ -351,6 +351,7 @@
   [cam-widget-bpmn-viewer],
   [cam-widget-dmn-viewer] {
     height: 400px;
+    overflow: auto;
   }
 
   .cmmn-resource pre {
